--- a/site/index.html
+++ b/site/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>helo coursera!</title>
+        <title>hello coursera!</title>
     </head>
     <body>
-        <h1>helo coursera!!!</h1>
+        <h1>hello coursera!!! modified page againn</h1>
     </body>    
 </html>
